infrastructure/controllers/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  rules:
    - host: longhorn.homelab.rookian.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.homelab.rookian.dev
      secretName: tls-longhorn-homelab
